Fix (graphics) : rectfill applied a wrong path adjustment.

DETAILS :

Bug 689361 "Text has white stripes and missing parts at 100 dpi".

Ghostsctript applies path adjustment as an implementation of
"any part of pixel inside" filling rule.
However it was wrong for rectfill :
the lower adjustment was too wide, causing extra pixels to paint
when the lower coordinate of the rectangle falls to pixel center.
Besides that, the X adjustment was applied to Y axis.

EXPECTED DIFFERENCES :

This change causes multiple minor raster difference :

raster 72 dpi :

"H:\AuxFiles\CompareFiles\Bug688308.ps"

300 dpi :

"H:\AuxFiles\CompareFiles\213-01.ps"
"H:\AuxFiles\CompareFiles\244-01.ps"
"H:\AuxFiles\CompareFiles\245-01.ps"
"H:\AuxFiles\CompareFiles\245-07.ps"
"H:\AuxFiles\CompareFiles\245-13.ps"
"H:\AuxFiles\CompareFiles\269-01.ps"
"H:\AuxFiles\CompareFiles\401-01.ps"
"H:\AuxFiles\CompareFiles\421-01.ps"
"H:\AuxFiles\CompareFiles\456-01.ps"
"H:\AuxFiles\CompareFiles\Bug688308.ps"
"H:\AuxFiles\CompareFiles\Bug688584.ps"

It may cause raster differences with ghostpcl,
which are not checked here.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@8613 a1074d23-0009-0410-80fe-cf8c14f379e6